fix buttons for hero on tablet and desktop

--- a/src/components/pages/HomePage/HomePage.scss
+++ b/src/components/pages/HomePage/HomePage.scss
@@ -51,19 +51,14 @@
   }
 
   &__slider {
-    margin-bottom: 60px;
     margin-inline: -16px;
+    margin-bottom: 18px;
 
     @include on-tablet {
       display: flex;
       justify-content: center;
       gap: 19px;
       margin-inline: 0;
-      margin-bottom: 64px;
-    }
-
-    @include on-small-desktop {
-      margin-bottom: 80px;
     }
 
     &-content {
@@ -72,11 +67,30 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 18px;
 
       @include on-tablet {
         width: calc(100% - 32px * 2 - 16px * 2);
       }
+    }
+  }
+
+  &__slider-button {
+    background-color: $surface1-color;
+    border-color: $surface2-color;
+    border-radius: 0;
+    box-sizing: border-box;
+    padding: 0;
+
+    display: none;
+
+    @include on-tablet {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-self: stretch;
+      width: 32px;
+
+      background-color: $surface2-color;
     }
   }
 }
@@ -130,66 +144,20 @@
   }
 }
 
-.slider-btn {
-  display: flex;
-  gap: 16px;
-
-  &__left,
-  &__right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $surface1-color;
-    border-color: $surface2-color;
-    border-radius: 0;
-    box-sizing: border-box;
-    height: 32px;
-    width: 32px;
-    padding: 0;
-  }
-
-  &__left {
-
-    &--big {
-      display: none;
-
-      @include on-tablet {
-        display: flex;
-        width: 32px;
-        height: 189px;
-
-        background-color: $surface2-color;
-      }
-
-      @include on-small-desktop {
-        height: 400px;
-      }
-    }
-  }
-
-  &__right {
-
-    &--big {
-      display: none;
-
-      @include on-tablet {
-        display: flex;
-        width: 32px;
-        height: 189px;
-      }
-
-      @include on-small-desktop {
-        height: 400px;
-      }
-    }
-  }
-}
-
 .custom-pagination {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
+  margin-bottom: 60px;
+
+  @include on-tablet {
+    margin-bottom: 64px;
+  }
+
+  @include on-small-desktop {
+    margin-bottom: 80px;
+  }
 }
 
 .custom-bullet {
